@startuml

title __HANDLERS's Class Diagram__\n

  namespace jovic.dragan.pj2.aerospace {
    namespace handlers {
      class jovic.dragan.pj2.aerospace.handlers.CollisionHandler {
          + CollisionHandler()
          + accept()
          + andThen()
      }
    }
  }
  

  namespace jovic.dragan.pj2.aerospace {
    namespace handlers {
      class jovic.dragan.pj2.aerospace.handlers.InvasionHandler {
          + InvasionHandler()
          + accept()
          + andThen()
      }
    }
  }
  

  jovic.dragan.pj2.aerospace.handlers.CollisionHandler .up.|> java.util.function.Consumer
  jovic.dragan.pj2.aerospace.handlers.CollisionHandler o-- jovic.dragan.pj2.aerospace.Aerospace : aerospace
  jovic.dragan.pj2.aerospace.handlers.InvasionHandler .up.|> java.util.function.Consumer
  jovic.dragan.pj2.aerospace.handlers.InvasionHandler o-- jovic.dragan.pj2.aerospace.Aerospace : aerospace


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
